--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -47,7 +47,7 @@
    <div class="container text-center">
        <div class="card col-md-6 mx-auto">
            <h1 class="display-5">Welcome to My Secure Website!</h1>
-           <p class="lead">להוסיף תיאור</p>
+           <p class="lead">Created by Natan Bakshi and Aryeh Gelbstein</p>
            <hr>
            <p>Don't have an account yet? Sign up below:</p>
            <div class="d-flex justify-content-center gap-3">
@@ -58,14 +58,14 @@
            <p class="lead">Welcome back! Please log in:</p>
            <form action="http://127.0.0.1:5000/Login" method="POST">
                <div class="mb-3">
-                   <label for="InputUsername" class="form-label">Username</label>
+                   <label for="InputUsername" class="form-label"></label>
                    <input type="text" class="form-control" id="InputUsername" name='username' placeholder="Enter your username">
                </div>
                <div class="mb-3">
-                   <label for="InputPassword" class="form-label">Password</label>
+                   <label for="InputPassword" class="form-label"></label>
                    <input type="password" class="form-control" id="InputPassword" name='password' placeholder="Enter your password">
                </div>
-                   <h1>{{ message }}</h1>
+                   <p>{{ message }}</p>
 
                <button type="submit" class="btn btn-custom text-white w-100">Login</button>
            </form>
