--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -187,7 +187,7 @@
    <div class="container text-center">
        <div class="card col-md-6 mx-auto">
            <h1 class="display-5">Welcome to My Secure Website!</h1>
-           <p class="lead">להוסיף תיאור</p>
+           <p class="lead">Created by Natan Bakshi and Aryeh Gelbstein</p>
            <hr>
            <p>Already have an account? Log in below:</p>
            <div class="d-flex justify-content-center gap-3">
@@ -198,19 +198,21 @@
            <p class="lead">Sign up to create an account:</p>
            <form action="http://127.0.0.1:5000/SignUp" method="post">
                <div class="mb-3">
-                   <label for="InputUsername" class="form-label">Choose a Username</label>
+                   <label for="InputUsername" class="form-label"></label>
                    <input type="text" class="form-control" id="InputUsername" name='username' placeholder="Unique username">
-                   <small class="form-text text-light">יש להכניס הוראות</small>
+                   <small class="form-text text-light">You cannot use special characters like <,>,=,-,; or spaces.</small>
                </div>
                <div class="mb-3">
-                   <label for="InputPassword1" class="form-label">Create a Password</label>
-                   <input type="password" class="form-control" id="InputPassword1" name='password1' placeholder="Choosing a secret code">
-                   <small class="form-text text-light">יש להכניס הוראות</small>
+                   <label for="InputPassword1" class="form-label"></label>
+                   <input type="password" class="form-control" id="InputPassword1" name='password1' placeholder="Choosing a passwords">
                </div>
                <div class="mb-3">
-                   <label for="InputPassword2" class="form-label">Enter Password Again</label>
-                   <input type="password" class="form-control" id="InputPassword2" name='password2' placeholder="Verify the secret code">
+                   <label for="InputPassword2" class="form-label"></label>
+                   <input type="password" class="form-control" id="InputPassword2" name='password2' placeholder="Verify the passwords">
+                   <small class="form-text text-light">Make sure the passwords match</small>
+
                </div>
+               <p>{{ message }}</p>
                <button type="submit" class="btn btn-custom text-white w-100">Submit</button>
            </form>
        </div>
