--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
    <div class="container text-center">
        <div class="card col-md-6 mx-auto">
            <h1 class="display-5">Welcome to My Secure Website!</h1>
-           <p class="lead">You have successfully logged in</p>
+           <p class="lead">Created by Natan Bakshi and Aryeh Gelbstein</p>
            <hr>
            <p>You have successfully logged in:</p>
        </div>
